--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -118,8 +118,14 @@ h3, .h3 {
 .bgLowWhite {
   background-color: #F6F6F6; }
 
+.bgOffWhite {
+  background-color: #FFF; }
+
 .pink {
   color: #FF0956; }
+
+.bgPink {
+  background-color: #FF0956; }
 
 .navy {
   color: #32325D; }
@@ -128,10 +134,13 @@ h3, .h3 {
   background-color: #32325D; }
 
 .bgLowNavy {
-  background-color: #EEEEEE; }
+  background-color: #EEEEEE !important; }
 
 .br-commun {
   border-radius: 14px; }
+
+.min-width {
+  min-width: 200px; }
 
 a, button {
   display: block;
@@ -320,9 +329,39 @@ ul {
 .form-check-input:hover, .form-check-label:hover {
   cursor: pointer; }
 
+.lh-46 {
+  line-height: 46px !important; }
+
+/* .border-listing{
+    position: relative;
+    &::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 1px;
+        height: 100%;
+        background-color: rgba($color: $primary-color-navy, $alpha: 0.5);
+    }
+} */
+.circle {
+  border-radius: 50%;
+  width: 60px;
+  height: 60px; }
+  .circle.edit-profile-img {
+    width: 200px;
+    height: 200px; }
+  .circle.edit-profile {
+    width: 30px;
+    height: 30px; }
+
 .ar .grey-box .close {
   right: inherit;
   left: 10px; }
+
+@media (min-width: 100px) and (max-width: 1000px) {
+  .border-end {
+    border-bottom: 1px solid #dee2e6 !important; } }
 
 @media (max-width: 575.98px) {
   .btn.add-new-btn {
@@ -568,6 +607,51 @@ footer {
   top: 50%;
   right: 14px;
   transform: translateY(-50%); }
+
+.card-min-height {
+  min-height: 478px; }
+
+.add-new-card {
+  border: 1px dashed rgba(50, 50, 93, 0.5); }
+  .add-new-card a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10; }
+  .add-new-card .add-new-content {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    left: 0;
+    transform: translateY(-50%); }
+
+.bgLowNavy.p-absolute {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%; }
+
+.edit-profile-img img {
+  height: 100%;
+  object-fit: cover; }
+
+.edit-profile {
+  border: 1px solid #32325D;
+  position: absolute;
+  bottom: 20%;
+  right: 0;
+  background-color: #F9F9F9; }
+  .edit-profile img {
+    height: 100%;
+    object-fit: none; }
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  border: none; }
+
+.nav-tabs {
+  border-bottom: none; }
 
 .table-wrapper {
   width: 100%; }
